--- a/index.html
+++ b/index.html
@@ -1,7 +1,19 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Connections</h1>
-<p>English teaching activities.</p>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <title>Electrical appliances</title>
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="application-name" content="Electrical appliances">
+    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="icon" sizes="16x16" href="favicon.ico">
+    <link rel="icon" sizes="72x72" href="icon-72.png">
+    <link rel="icon" sizes="192x192" href="icon-192.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script type="text/javascript" src="https://clic.xtec.cat/dist/jclic.js/jclic.min.js"></script>
+  </head>
+  <body style="margin:0">
+    <div class ="JClic" data-project="electr.jclic"></div>
+  </body>
 </html>
